Closed Bug 1824778 Opened 2 years ago Closed 2 years ago

Block threadsafe GL and DMABUF on NVIDIA binary drivers for 530.*

Categories

(Core :: Graphics: WebRender, defect, P3)

Firefox 106
x86_64
Linux
defect

Tracking

()

RESOLVED FIXED
113 Branch
Tracking Status
firefox-esr102 --- disabled
firefox111 --- disabled
firefox112 --- fixed
firefox113 --- fixed

People

(Reporter: aosmond, Assigned: aosmond)

References

(Depends on 1 open bug, Blocks 1 open bug)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

+++ This bug was initially created as a clone of Bug #1820055 +++

+++ This bug was initially created as a clone of Bug #1788573 +++

See bug 1788573 comment 40. We need to block the same features on 530.* as well for now.

Assignee: nobody → aosmond
Severity: -- → N/A
Status: NEW → ASSIGNED
Type: defect → task
Priority: -- → P3

This is not a top crash anymore.

We can unblock when we have an actual driver version that works.

(In reply to Andrew Osmond [:aosmond] (he/him) from comment #1)

This is not a top crash anymore.

Obviously!

But it's because it's currently being mitigated by Bug 1820055 which is what caused it to go from top crash to NOT top crash, which is precisely what it was intended to do, myself included! (since it landed my FF has not crashed)

Once 530-series drivers hit more mainstream it will return. Currently most mainstream distro's including mine (Pop!_OS) haven't rolled are using 525 (or lower) as its in the "new features" branch, not "production" but it will eventually and then you'll see a return of the bug and a spike in crashes because as Erik from Nvidia confirmed, the bug has not been fixes to address the crash nor the workaround that was mitigating it.

What do they say about an ounce of prevention versus a pound of cure? That's the point of changing the version checking flag as per Bug 1820055, it's low risk and prevents a problem down the road.

(In reply to Andrew Osmond [:aosmond] (he/him) from comment #2)

Created attachment 9325249 [details]
Bug 1824778 - Block threadsafe GL and DMABUF blocklist on all NVIDIA binary drivers.

We can unblock when we have an actual driver version that works.

I don't think you're understanding the point of the fix. It's a work-around, for the Browser to detect NVIDIA drivers versions at launch.

Bug 1788573 addresses the root bug, which NVIDIA is working on.

Bug 1820055 is the workaround in lieu of a fix. But it only works up to version 530 as per the original idea it would be fixed by 530. Ie: the bug just arbitrarily hardcoded 530 because of the information Erik from NVIDIA provided where he hoped to have the fix from NVIDIA. Erik did not get the fix into 530, hence the workaround will become less effective and return if the workaround isn't simply incremented to 531.0. NVIDIA drivers 530 are released and in the wild, so this isn't hypothetical. They just aren't common (yet).

Never mind my last comment! I see you and I were typing at the same time and I got slightly confused by you saying it was not a top crash. I believe you meant that it won't be a top crash with the patch you attached because you just just block Threadsafe GL and DMABUF all together for now!

I need another coffee :)

Oh sorry, yes I meant, this doesn't need to be tracked by our release folks anymore, because this is just an update until working driver is available :). We'll update it once we can test with a released driver.

This bug has the keyword crash, so its type should be defect.

Type: task → defect
Pushed by aosmond@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/4a92205e0d40 Block threadsafe GL and DMABUF blocklist on all NVIDIA binary drivers. r=gfx-reviewers,jrmuizel
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 113 Branch

Comment on attachment 9325249 [details]
Bug 1824778 - Block threadsafe GL and DMABUF blocklist on all NVIDIA binary drivers.

Beta/Release Uplift Approval Request

  • User impact if declined: NVIDIA Linux users may experience crashes
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Just shifts from a driver block to a device block for all drivers. The blocked path is what most users are currently on right now.
  • String changes made/needed:
  • Is Android affected?: No
Attachment #9325249 - Flags: approval-mozilla-beta?

Do we need to update our downloadable blocklist too? IIUC, that's how we worked around this for other channels like ESR?

Flags: needinfo?(aosmond)

Good idea. I can see already 1/3 of the crashes have the 530.41.3 driver.

Flags: needinfo?(aosmond)

I will block it on versions up to 111.* via the downloadable blocklist so we should take the update for 112 beta.

Comment on attachment 9325249 [details]
Bug 1824778 - Block threadsafe GL and DMABUF blocklist on all NVIDIA binary drivers.

Approved for 112.0b8

Attachment #9325249 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

The remote blocklisting update is live for <112 now.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: