Bug 1824778 - Block threadsafe GL and DMABUF blocklist on all NVIDIA binary drivers. r=gfx-reviewers,jrmuizel, a=dsmith

We can unblock when we have an actual driver version that works.

Differential Revision: https://phabricator.services.mozilla.com/D173741